--- a/index.html
+++ b/index.html
@@ -520,8 +520,8 @@
 			<div class="mx-auto px-4 sm:px-6">
 				<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 					<!-- Education -->
-					<div class="container px-5 py-24 mx-auto flex flex-wrap">
-						<div class="flex relative pt-10 pb-20 sm:items-center md:w-2/3 mx-auto">
+					<div class="container px-2 my-2 mx-auto flex flex-wrap">
+						<div class="flex relative pb-1 sm:items-center md:w-2/3 mx-auto">
 							<div class="w-6 absolute inset-0 flex items-center justify-center">
 								<div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
 							</div>
@@ -538,7 +538,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="flex relative pb-20 sm:items-center md:w-2/3 mx-auto">
+						<div class="flex relative pb-1 sm:items-center md:w-2/3 mx-auto">
 							<div class="h-full w-6 absolute inset-0 flex items-center justify-center">
 								<div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
 							</div>
@@ -555,7 +555,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="flex relative pb-10 sm:items-center md:w-2/3 mx-auto">
+						<div class="flex relative pb-1 sm:items-center md:w-2/3 mx-auto">
 							<div class="h-full w-6 absolute inset-0 flex items-center justify-center">
 								<div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
 							</div>
