--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
+	<!-- Typed.js for typing effect -->
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.1.0/lib/typed.min.js"></script>
+
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="styles.css" />
+
+	<!-- Main JavaScript -->
+	<script type="module" src="js/main.js"></script>
 </head>
 
 <body class="min-h-screen">
