--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
 						<ul class="space-y-3">
 							<li class="flex items-start">
 								<i class="fas fa-check-circle text-red-500 mt-1 mr-3"></i>
-								<span class="text-gray-700">Organized 4+ Blood Donation Drives</span>
+								<span class="text-gray-700">Organized 3 Blood Donation Drives</span>
 							</li>
 							<li class="flex items-start">
 								<i class="fas fa-check-circle text-red-500 mt-1 mr-3"></i>
@@ -754,17 +754,17 @@
 			<div class="mt-20 grid grid-cols-1 md:grid-cols-3 gap-8">
 				<div
 					class="text-center p-6 bg-white rounded-xl shadow-lg transform transition-all duration-300 hover:scale-105">
-					<div class="text-4xl font-bold text-blue-600 mb-2">4+</div>
+					<div class="text-4xl font-bold text-blue-600 mb-2">3</div>
 					<div class="text-gray-600">Blood Drives Organized</div>
 				</div>
 				<div
 					class="text-center p-6 bg-white rounded-xl shadow-lg transform transition-all duration-300 hover:scale-105">
-					<div class="text-4xl font-bold text-green-600 mb-2">50+</div>
+					<div class="text-4xl font-bold text-green-600 mb-2">2</div>
 					<div class="text-gray-600">Workshops Conducted</div>
 				</div>
 				<div
 					class="text-center p-6 bg-white rounded-xl shadow-lg transform transition-all duration-300 hover:scale-105">
-					<div class="text-4xl font-bold text-purple-600 mb-2">1000+</div>
+					<div class="text-4xl font-bold text-purple-600 mb-2">50+</div>
 					<div class="text-gray-600">People Impacted</div>
 				</div>
 			</div>
